// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`typescript-css-modules build should create valid app 1`] = `
SOURCE HTML: 
<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="http://localhost:4003/main-bfe8911084b821bf8edd.css"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4003/runtime-81dc2a88ea7a7a130965.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4003/vendors~main-16cf5a3b9443156bf48c.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4003/main-ed691771b11002e9505d.js"
          crossorigin="anonymous"
    >
  </head>
  <body>
    <div id="app">
      <div class="_1brbpTo Jlnxw97">
        <div class="_3YtmnHj lwsthgY"
             data-automation-text="true"
        >
          Hello World
        </div>
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
            crossorigin="anonymous"
    >
      []
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4003/runtime-81dc2a88ea7a7a130965.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4003/vendors~main-16cf5a3b9443156bf48c.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4003/main-ed691771b11002e9505d.js"
            crossorigin="anonymous"
    >
    </script>
  </body>
</html>

POST HYDRATE DIFFS: NO DIFF
`;

exports[`typescript-css-modules build should generate the expected files 1`] = `
Object {
  "index.html": 
<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="http://localhost:4003/main-bfe8911084b821bf8edd.css"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4003/runtime-81dc2a88ea7a7a130965.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4003/vendors~main-16cf5a3b9443156bf48c.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4003/main-ed691771b11002e9505d.js"
          crossorigin="anonymous"
    >
  </head>
  <body>
    <div id="app">
      <div class="_1brbpTo Jlnxw97">
        <div class="_3YtmnHj lwsthgY"
             data-automation-text="true"
        >
          Hello World
        </div>
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
            crossorigin="anonymous"
    >
      []
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4003/runtime-81dc2a88ea7a7a130965.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4003/vendors~main-16cf5a3b9443156bf48c.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4003/main-ed691771b11002e9505d.js"
            crossorigin="anonymous"
    >
    </script>
  </body>
</html>
,
  "jsStyles.css.js.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const nested: string;
export const root: string;
",
  "lessStyles.less.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const nested: string;
export const root: string;
",
  "main-bfe8911084b821bf8edd.css": ._1brbpTo {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}
._1brbpTo ._3YtmnHj {
  font-size: 32px;
}
.Jlnxw97 {
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}
.Jlnxw97 .lwsthgY {
  color: red;
}
,
  "main-ed691771b11002e9505d.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime-81dc2a88ea7a7a130965.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "vendors~main-16cf5a3b9443156bf48c.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`typescript-css-modules build-ssr should create valid app 1`] = `
SOURCE HTML: 
<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="http://localhost:4003/main-bfe8911084b821bf8edd.css"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4003/runtime-81dc2a88ea7a7a130965.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4003/vendors~main-a4248f7c854054c1a25c.js"
          crossorigin="anonymous"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="http://localhost:4003/main-c49e1d1588eb861254f6.js"
          crossorigin="anonymous"
    >
  </head>
  <body>
    <div id="app">
      <div class="_1brbpTo Jlnxw97">
        <div class="_3YtmnHj lwsthgY"
             data-automation-text="true"
        >
          Hello World
        </div>
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
            crossorigin="anonymous"
    >
      []
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4003/runtime-81dc2a88ea7a7a130965.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4003/vendors~main-a4248f7c854054c1a25c.js"
            crossorigin="anonymous"
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:4003/main-c49e1d1588eb861254f6.js"
            crossorigin="anonymous"
    >
    </script>
  </body>
</html>

POST HYDRATE DIFFS: NO DIFF
`;

exports[`typescript-css-modules build-ssr should generate the expected files 1`] = `
Object {
  "jsStyles.css.js.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const nested: string;
export const root: string;
",
  "lessStyles.less.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const nested: string;
export const root: string;
",
  "main-bfe8911084b821bf8edd.css": ._1brbpTo {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}
._1brbpTo ._3YtmnHj {
  font-size: 32px;
}
.Jlnxw97 {
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}
.Jlnxw97 .lwsthgY {
  color: red;
}
,
  "main-c49e1d1588eb861254f6.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime-81dc2a88ea7a7a130965.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "server.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "vendors~main-a4248f7c854054c1a25c.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`typescript-css-modules start should start a development server 1`] = `
SOURCE HTML: 
<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="/main.css"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/runtime.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/vendors~main.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/main.js"
    >
  </head>
  <body>
    <div id="app">
      <div class="lessStyles__root___1brbpTo jsStyles-css__root___Jlnxw97">
        <div class="lessStyles__nested___3YtmnHj jsStyles-css__nested___lwsthgY"
             data-automation-text="true"
        >
          Hello World
        </div>
      </div>
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="application/json"
    >
      []
    </script>
    <script async
            data-chunk="main"
            src="/runtime.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/vendors~main.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/main.js"
    >
    </script>
  </body>
</html>

POST HYDRATE DIFFS: NO DIFF
`;
